src/objects/auHonbuDirect__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <picklist>
            <picklistValues>
                <fullName>CAT1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>内容説明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistributionRecipient__c</fullName>
        <label>配信先</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplementationEndDate__c</fullName>
        <label>実施終了日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImplementationStartDate__c</fullName>
        <label>実施開始日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if data is archived or not</description>
        <label>IsArchived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuerLabel__c</fullName>
        <label>発信元</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkDescription10__c</fullName>
        <label>リンク 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkDescription1__c</fullName>
        <label>リンク 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkDescription2__c</fullName>
        <label>リンク 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkURL10__c</fullName>
        <label>URLリンク 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkURL1__c</fullName>
        <label>URLリンク 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkURL2__c</fullName>
        <label>URLリンク 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <label>発信日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransmissionDate__c</fullName>
        <label>発信日時</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>auチャンネル</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>auChannel</fullName>
        <columns>NAME</columns>
        <columns>ImplementationStartDate__c</columns>
        <columns>ImplementationEndDate__c</columns>
        <columns>Title__c</columns>
        <columns>DistributionRecipient__c</columns>
        <filterScope>Everything</filterScope>
        <label>auチャンネル</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HD-{00000000}</displayFormat>
        <label>auHonbuDirect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>shared_To_This_KDDI_User__c</fullName>
        <label>shared To This KDDI User</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>shared_To_This_SA_User__c</fullName>
        <label>shared To This SA User</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>shared_To_This_Shop_User__c</fullName>
        <label>shared To This Shop User</label>
    </sharingReasons>
</CustomObject>